manifest/demoteam/purge-varnish/prod/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: purge-varnish
    env: prod
    team: demoteam
  name: purge-varnish
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: purge-varnish
        env: prod
    spec:
      securityContext: {}
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: purge-varnish
      env: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: purge-varnish
    env: prod
    team: demoteam
  name: purge-varnish
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: purge-varnish.prod.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: purge-varnish
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: purge-varnish
    env: prod
    team: demoteam
  name: purge-varnish
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: purge-varnish
    env: prod
    team: demoteam
